{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 20,
  "lineage": "a61ac6a5-9e81-f909-44b6-05019272846a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "web_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:551645171595:loadbalancer/app/web-alb/9b24103d7bbf2a12",
            "arn_suffix": "app/web-alb/9b24103d7bbf2a12",
            "dns_name": "web-alb-1016518102.ap-northeast-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:551645171595:loadbalancer/app/web-alb/9b24103d7bbf2a12",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-alb",
            "security_groups": [
              "sg-05774c40ccdb60378"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0173b55a55e39b3bb"
              },
              {
                "subnet_id": "subnet-0b726b08b0b45f432"
              }
            ],
            "subnets": [
              "subnet-0173b55a55e39b3bb",
              "subnet-0b726b08b0b45f432"
            ],
            "vpc_id": "vpc-0611d9b146bacec9c",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "depends_on": [
            "aws_security_group.web_security_group",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:551645171595:listener/app/web-alb/9b24103d7bbf2a12/a1c4aa1d915bb292",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:551645171595:targetgroup/web-tg/b2ddc5a8b1f01fbc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:551645171595:listener/app/web-alb/9b24103d7bbf2a12/a1c4aa1d915bb292",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:551645171595:loadbalancer/app/web-alb/9b24103d7bbf2a12",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.web_alb",
            "aws_alb_target_group.web_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "web_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:551645171595:targetgroup/web-tg/b2ddc5a8b1f01fbc",
            "arn_suffix": "targetgroup/web-tg/b2ddc5a8b1f01fbc",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:551645171595:targetgroup/web-tg/b2ddc5a8b1f01fbc",
            "lambda_multi_value_headers_enabled": false,
            "name": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0611d9b146bacec9c"
          },
          "depends_on": [
            "aws_vpc.playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alb_attach_tg_web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:551645171595:targetgroup/web-tg/b2ddc5a8b1f01fbc-20200115090317148600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:551645171595:targetgroup/web-tg/b2ddc5a8b1f01fbc",
            "target_id": "i-03a9af29d4d004776"
          },
          "depends_on": [
            "aws_alb_target_group.web_tg",
            "aws_instance.web_ec2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:551645171595:targetgroup/web-tg/b2ddc5a8b1f01fbc-20200115090317046300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:551645171595:targetgroup/web-tg/b2ddc5a8b1f01fbc",
            "target_id": "i-08fc170107cf28205"
          },
          "depends_on": [
            "aws_alb_target_group.web_tg",
            "aws_instance.web_ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f4a43d7185f588a9",
            "public_dns": "ec2-18-177-187-168.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.177.187.168",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a0ac66fcd923d0c2",
            "domain": "vpc",
            "id": "eipalloc-0d31a587b98be1e22",
            "instance": "i-03a9af29d4d004776",
            "network_interface": "eni-0e87379709d1dc673",
            "private_dns": "ip-10-10-0-97.ap-northeast-1.compute.internal",
            "private_ip": "10.10.0.97",
            "public_dns": "ec2-18-178-56-112.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.178.56.112",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.web_ec2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b31d4f015785ed15",
            "domain": "vpc",
            "id": "eipalloc-00a7c779e311a674d",
            "instance": "i-08fc170107cf28205",
            "network_interface": "eni-0fdb6b2ba1b1f3841",
            "private_dns": "ip-10-10-0-202.ap-northeast-1.compute.internal",
            "private_ip": "10.10.0.202",
            "public_dns": "ec2-52-68-238-212.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.68.238.212",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.web_ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_ec2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06d9ad3f86032262d",
            "arn": "arn:aws:ec2:ap-northeast-1:551645171595:instance/i-03a9af29d4d004776",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03a9af29d4d004776",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0e87379709d1dc673",
            "private_dns": "ip-10-10-0-97.ap-northeast-1.compute.internal",
            "private_ip": "10.10.0.97",
            "public_dns": "ec2-13-231-210-87.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.231.210.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0716771cb8c112b09",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0173b55a55e39b3bb",
            "tags": {
              "Name": "web-0-web",
              "TTL": "270h"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05774c40ccdb60378"
            ]
          },
          "depends_on": [
            "aws_security_group.web_security_group",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06d9ad3f86032262d",
            "arn": "arn:aws:ec2:ap-northeast-1:551645171595:instance/i-08fc170107cf28205",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-08fc170107cf28205",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0fdb6b2ba1b1f3841",
            "private_dns": "ip-10-10-0-202.ap-northeast-1.compute.internal",
            "private_ip": "10.10.0.202",
            "public_dns": "ec2-18-177-143-117.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.177.143.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0be102b5dcb4dc50f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0173b55a55e39b3bb",
            "tags": {
              "Name": "web-1-web",
              "TTL": "270h"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05774c40ccdb60378"
            ]
          },
          "depends_on": [
            "aws_security_group.web_security_group",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03110fc6af1c62b56",
            "owner_id": "551645171595",
            "vpc_id": "vpc-0611d9b146bacec9c"
          },
          "depends_on": [
            "aws_vpc.playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4a43d7185f588a9",
            "id": "nat-0f997f999007999a1",
            "network_interface_id": "eni-052a7e9adde2192fd",
            "private_ip": "10.10.0.26",
            "public_ip": "18.177.187.168",
            "subnet_id": "subnet-0173b55a55e39b3bb"
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-068a76762530d4751",
            "owner_id": "551645171595",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03110fc6af1c62b56",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-0611d9b146bacec9c"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077ebca7a6b6d89bb",
            "route_table_id": "rtb-068a76762530d4751",
            "subnet_id": "subnet-0173b55a55e39b3bb"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077ebca7a6b6d89bb",
            "route_table_id": "rtb-068a76762530d4751",
            "subnet_id": "subnet-0173b55a55e39b3bb"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:551645171595:security-group/sg-05774c40ccdb60378",
            "description": "Web Sercuriy Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05774c40ccdb60378",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_security_group",
            "name_prefix": null,
            "owner_id": "551645171595",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0611d9b146bacec9c"
          },
          "depends_on": [
            "aws_vpc.playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:551645171595:subnet/subnet-0173b55a55e39b3bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.0.0/24",
            "id": "subnet-0173b55a55e39b3bb",
            "map_public_ip_on_launch": false,
            "owner_id": "551645171595",
            "tags": {
              "Name": "public-0"
            },
            "vpc_id": "vpc-0611d9b146bacec9c"
          },
          "depends_on": [
            "aws_vpc.playground"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:551645171595:subnet/subnet-0b726b08b0b45f432",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0b726b08b0b45f432",
            "map_public_ip_on_launch": false,
            "owner_id": "551645171595",
            "tags": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-0611d9b146bacec9c"
          },
          "depends_on": [
            "aws_vpc.playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "playground",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:551645171595:vpc/vpc-0611d9b146bacec9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0e458dea954fcfe8a",
            "default_route_table_id": "rtb-026c267dc6966b6be",
            "default_security_group_id": "sg-057390058bac7f4ff",
            "dhcp_options_id": "dopt-4d58052a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0611d9b146bacec9c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-026c267dc6966b6be",
            "owner_id": "551645171595"
          }
        }
      ]
    }
  ]
}